--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <span class="heading-primary-sub">Is where life happens</span>
             </h1>
 
-            <a href="#" class="btn btn-white" > Discover our Products</a>
+            <a href="#" class="btn btn-white btn-animated" > Discover Products</a>
         </div>
     </header>   
     </body>
