--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     <body>
         <header class='header'>
            <div class="header__logo-box">
-               <img src='img/logo-white.png' alt='Logo' class="header__logo" />
+               <img src='img/logo-white.png' alt='Logo' class="header__logo" > </img>
            </div>
-        <div class="header__text-box">
-            <h1 class="heading-primary">
-                <span class="heading-primary--main">OUTDOORS</span>
-                <span class="heading-primary--sub">Is where life happens</span>
-            </h1>
-            <a href="#" class="btn btn--white btn--animated"> Discover Products</a>
-        </div>
-    </header>   
+                <div class="header__text-box">
+                    <h1 class="heading-primary">
+                        <span class="heading-primary--main">OutDoors</span>
+                        <span class="heading-primary--sub">Is where life happens</span>
+                    </h1>
+                    <a href="#" class="btn btn--white btn--animated"> Discover Products</a>
+                </div>
+         </header>   
     </body>
 </html>
